--- a/week13.html
+++ b/week13.html
@@ -8,12 +8,12 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (1)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Freeman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Prater</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -82,9 +82,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Gaskin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
@@ -95,12 +95,12 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (4)</b></font></td></tr>
-<tr><td>Newton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Mitchell</td>      <td></td><td align=right>0</td></tr>
-<tr><td>TJohnson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>ZWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -128,11 +128,11 @@
 <tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Patterson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
