--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <a href="week10.html"><b>10</b></a>
 <a href="week11.html"><b>11</b></a>
 <a href="week12.html"><b>12</b></a>
-<a href="week13.html"><b>13P</b></a><br>
+<a href="week13.html"><b>13</b></a>
+<a href="week14.html"><b>14P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -72,41 +73,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(9)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>8825</font></td>
-    <td><font size=2>6715</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>9220</font></td>
+    <td><font size=2>7195</font></td>
     <td><font size=2>1300</font></td>
-    <td><font size=2>425</font></td>
+    <td><font size=2>395</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Matthew(1)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>7800</font></td>
-    <td><font size=2>6455</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>8135</font></td>
+    <td><font size=2>7275</font></td>
     <td><font size=2>1360</font></td>
     <td><font size=2>220</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Roger(7)</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7960</font></td>
-    <td><font size=2>7605</font></td>
+    <td><font size=2>8440</font></td>
+    <td><font size=2>8000</font></td>
     <td><font size=2>1325</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(5)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>6515</font></td>
-    <td><font size=2>8320</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7310</font></td>
+    <td><font size=2>9215</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(3)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>6640</font></td>
-    <td><font size=2>8455</font></td>
+    <td><font size=2>11</font></td>
+    <td><font size=2>7020</font></td>
+    <td><font size=2>9200</font></td>
     <td><font size=2>910</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
@@ -119,42 +120,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>7245</font></td>
-    <td><font size=2>6445</font></td>
+    <td><font size=2>7990</font></td>
+    <td><font size=2>6825</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8495</font></td>
-    <td><font size=2>7525</font></td>
+    <td><font size=2>9240</font></td>
+    <td><font size=2>7910</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>430</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Grant(4)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8065</font></td>
-    <td><font size=2>7415</font></td>
-    <td><font size=2>865</font></td>
+    <td><font size=2>8960</font></td>
+    <td><font size=2>8210</font></td>
+    <td><font size=2>895</font></td>
     <td><font size=2>400</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7340</font></td>
-    <td><font size=2>8215</font></td>
+    <td><font size=2>8160</font></td>
+    <td><font size=2>8550</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>250</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>States(6)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>5920</font></td>
-    <td><font size=2>7655</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>6305</font></td>
+    <td><font size=2>8400</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>150</font></td>
     <td><font size=2>0</font></td>
