--- a/week13.html
+++ b/week13.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (1)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Freeman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>55</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>35</td></tr>
+<tr><td>Freeman</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>105</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Prater</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Prater</td>        <td></td><td align=right>65</td></tr>
 <tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>335</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Stafford</td>      <td></td><td align=right>170</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Harris</td>        <td></td><td align=right>255</td></tr>
+<tr><td>MBrown</td>        <td></td><td align=right>25</td></tr>
 <tr><td>Mooney</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>315</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>55</td></tr>
 <tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>820</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gronkowski</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
-<tr><td>EMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>125</td></tr>
+<tr><td>Fournette</td>     <td></td><td align=right>50</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>70</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>45</td></tr>
+<tr><td>Gronkowski</td>    <td></td><td align=right>200</td></tr>
+<tr><td>Gould</td>         <td></td><td align=right>70</td></tr>
+<tr><td>EMoore</td>        <td></td><td align=right>85</td></tr>
+<tr><td></td>              <td></td><td align=right>745</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
 <tr><td>Taylor</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Michel</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Michel</td>        <td></td><td align=right>110</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>75</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Joseph</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Pittman</td>       <td></td><td align=right>35</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Joseph</td>        <td></td><td align=right>105</td></tr>
+<tr><td>Harris</td>        <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>385</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>110</td></tr>
+<tr><td>Mattison</td>      <td></td><td align=right>145</td></tr>
 <tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>25</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Folk</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Folk</td>          <td></td><td align=right>75</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>380</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>170</td></tr>
 <tr><td>Gaskin</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>130</td></tr>
+<tr><td>Goedert</td>       <td></td><td align=right>250</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>45</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>745</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (4)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mitchell</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>230</td></tr>
+<tr><td>Mitchell</td>      <td></td><td align=right>80</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>135</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>160</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>40</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>ZWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>120</td></tr>
+<tr><td>ZWilson</td>       <td></td><td align=right>130</td></tr>
+<tr><td></td>              <td></td><td align=right>895</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (5)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Gibson</td>        <td></td><td align=right>90</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>120</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>140</td></tr>
+<tr><td>DJohnson</td>      <td></td><td align=right>200</td></tr>
 <tr><td>Uzomah</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>35</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>160</td></tr>
+<tr><td></td>              <td></td><td align=right>795</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Patterson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>240</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Patterson</td>     <td></td><td align=right>35</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Beckham</td>       <td></td><td align=right>50</td></tr>
 <tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>130</td></tr>
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>480</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (9)</b></font></td></tr>
-<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Ryan</td>          <td></td><td align=right>45</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>75</td></tr>
 <tr><td>RJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Aiyuk</td>         <td></td><td align=right>25</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>75</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>140</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>395</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -168,41 +168,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(9)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>8825</font></td>
-    <td><font size=2>6715</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>9220</font></td>
+    <td><font size=2>7195</font></td>
     <td><font size=2>1300</font></td>
-    <td><font size=2>425</font></td>
+    <td><font size=2>395</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Matthew(1)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>7800</font></td>
-    <td><font size=2>6455</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>8135</font></td>
+    <td><font size=2>7275</font></td>
     <td><font size=2>1360</font></td>
     <td><font size=2>220</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Roger(7)</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7960</font></td>
-    <td><font size=2>7605</font></td>
+    <td><font size=2>8440</font></td>
+    <td><font size=2>8000</font></td>
     <td><font size=2>1325</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(5)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>6515</font></td>
-    <td><font size=2>8320</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7310</font></td>
+    <td><font size=2>9215</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(3)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>6640</font></td>
-    <td><font size=2>8455</font></td>
+    <td><font size=2>11</font></td>
+    <td><font size=2>7020</font></td>
+    <td><font size=2>9200</font></td>
     <td><font size=2>910</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
@@ -215,42 +215,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>7245</font></td>
-    <td><font size=2>6445</font></td>
+    <td><font size=2>7990</font></td>
+    <td><font size=2>6825</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8495</font></td>
-    <td><font size=2>7525</font></td>
+    <td><font size=2>9240</font></td>
+    <td><font size=2>7910</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>430</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Grant(4)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8065</font></td>
-    <td><font size=2>7415</font></td>
-    <td><font size=2>865</font></td>
+    <td><font size=2>8960</font></td>
+    <td><font size=2>8210</font></td>
+    <td><font size=2>895</font></td>
     <td><font size=2>400</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7340</font></td>
-    <td><font size=2>8215</font></td>
+    <td><font size=2>8160</font></td>
+    <td><font size=2>8550</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>250</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>States(6)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>5920</font></td>
-    <td><font size=2>7655</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>6305</font></td>
+    <td><font size=2>8400</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>150</font></td>
     <td><font size=2>0</font></td>
